--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "recharts": "^3.7.0"
   }
 }
