邮箱登录功能

--- a/python_api/.env.example
+++ b/python_api/.env.example
@@ -7,3 +7,15 @@ DB_PASSWORD=your_database_password
 
 # ASR 服务配置
 PYTHON_ASR_URL=http://127.0.0.1:50000/api/v1/asr
+
+# SMTP 邮件配置 (QQ邮箱)
+# 注意：SMTP_PASSWORD 是 QQ 邮箱的授权码，不是登录密码
+# 获取授权码：登录 QQ 邮箱 -> 设置 -> 账户 -> POP3/IMAP/SMTP/Exchange/CardDAV/CalDAV服务 -> 开启服务 -> 生成授权码
+SMTP_HOST=smtp.qq.com
+SMTP_PORT=587
+SMTP_USER=your_qq_email@qq.com
+SMTP_PASSWORD=your_qq_authorization_code
+SMTP_FROM_NAME=方言宝
+
+# 验证码配置
+CODE_EXPIRE_MINUTES=10
