--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.0
 psycopg==3.2.1
 requests==2.32.3
+email-validator>=2.0.0
 torch<=2.3
 torchaudio
 modelscope
