feat: 完成 Phase 1 用户资料系统
- 添加用户资料扩展字段（昵称、头像、简介、家乡、方言、积分、等级）
- 实现 JWT 认证模块（token 生成/验证）
- 创建用户资料 API（获取/更新/头像上传/搜索）
- 添加个人主页 /user/[id]
- 添加编辑资料页 /settings/profile
- 创建数据库迁移模块（包含所有6个阶段的表结构）
- 修复登录接口返回 JWT token
- 修复 QQ 邮箱发送中文发件人名称问题
- 添加 Sidebar 默认导出

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ uvicorn[standard]==0.32.0
 psycopg==3.2.1
 requests==2.32.3
 email-validator>=2.0.0
+pyjwt>=2.8.0
+python-multipart>=0.0.6
 torch<=2.3
 torchaudio
 modelscope
