--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.6",
     "lucide-react": "^0.562.0",
     "next": "latest",
     "react": "latest",
